--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
 }
